# Reflection

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agents/: __init__.py  analysis_agent.py  insight_agent.py  memory_agent.py  pattern_agent.py  supervisor_agent.py
app/api/: routes.py
app/core/: bootstrap.py  config.py
app/db/: connection.py  queries.py
app/models/: schemas.py
app/orchestration/: async_orchestrator.py  recommendation_validation.py  reflection_wrapper.py  schemas.py
app/services/: analyzer.py  embedding_service.py  feedback.py  insight_service.py  scoring.py
app/services/__pycache__/: pattern_detector.cpython-314.pyc:Zone.Identifier
app/storage/: schema.sql  sqlite.py  supabase_repository.py  vector_store.py
app/utils/: io.py  metrics.py
frontend/src/: App.jsx  index.css
frontend/src/api/: api.js
frontend/src/components/: AgentWorkspaceLayout.jsx  AppHeader.jsx  CampaignForm.jsx  InsightCard.jsx  IntroAnimation.jsx  MetricCard.jsx  RecommendationList.jsx  ResultsPanel.jsx  StepLoader.jsx
frontend/src/lib/: agentChatLLM.js  viewState.js
frontend/src/pages/: AnalyzePage.jsx  HistoryPage.jsx
tests/: test_comparator.py  test_pattern_detector.py
