[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marko-reflection-engine"
version = "0.1.0"
description = "Reflection & Learning Engine for campaign retrospectives and continuous improvement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pandas>=2.2,<3.0",
  "numpy>=2.0,<3.0",
  "pydantic>=2.9,<3.0",
  "openai>=1.0,<2.0",
  "chromadb>=0.5,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.28,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
